# pomodoro

./: Makefile  setup.cfg  setup.py
src/pomodoro/: __init__.py  __main__.py
tests/: test_clock.py  test_pomodoro.py  test_utils.py
