[metadata]
name = pomodoro-Dev3XoR
version = 0.0.1
author = Dev3XoR
author_email = devexor@protonmail.com
description = A pomodoro timer and clock
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dev3XOR/pomodoro
project_urls =
    Bug Tracker = https://github.com/Dev3XOR/pomodoro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[pycodestyle]
disable =
    C0103,
    C0114,
    C0115,
    C0116,
    E1101,
    E1136,
    R0201,
    R0901,
    R0903,
    W0511,
    W0612,
max-complexity = 10
max-line-length = 119

[coverage:run]
source = ./src
branch = True
